--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=B5ziZu"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=B5ziZu" type="text/css">
 
   
   
@@ -79,12 +79,12 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle display-4" href="page1.html#header02-1" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">&nbsp; התהליך והמחיר</a><div class="dropdown-menu" aria-labelledby="dropdown-981"><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#header12-h">הסבר קצר על התהליך</a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#features03-3">?מהי התחייבות שלכם </a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#pricing01-d">המחירים</a></div>
+                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="page1.html#header02-1" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">&nbsp; התהליך והמחיר</a><div class="dropdown-menu show" aria-labelledby="dropdown-981" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#header12-h">הסבר קצר על התהליך</a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#features03-3">?מהי התחייבות שלכם </a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#pricing01-d">המחירים</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#list01-d">שאלות נפוצות</a></li>
                     <li class="nav-item">
                         <a class="nav-link link text-primary display-4" href="index.html#contacts01-3">צרו קשר</a>
                     </li><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="file:///C:/Users/%D7%9C%D7%99%D7%A2%D7%93%20%D7%A9%D7%9B%D7%98%D7%A8/AppData/Local/Mobirise.com/Mobirise/amitshechter6630_0040gmail_002ecom/addons/agentm5/components/index.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">אודות</a><div class="dropdown-menu show" aria-labelledby="dropdown-774" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="index.html#header01-g">מי אני<br></a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features1-1">למה אצלי</a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features3-6">עם  מה  אני  בא<br></a></div>
+                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="file:///C:/Users/%D7%9C%D7%99%D7%A2%D7%93%20%D7%A9%D7%9B%D7%98%D7%A8/AppData/Local/Mobirise.com/Mobirise/amitshechter6630_0040gmail_002ecom/addons/agentm5/components/index.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">אודות</a><div class="dropdown-menu show" aria-labelledby="dropdown-774" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="index.html#header01-g">מי אני<br></a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features1-1">למה אצלי</a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features3-6">עם  מה  אני  בא<br></a></div>
                     </li></ul>
                 
 
@@ -360,7 +360,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="czNOK3cfpEOwMwFXwGHL6a7/3ZC6XtXNoNKXdkTHfEI4LzAO6a6lOBWyZyraTnTk1xvMdfzOoIlIRT62Ks30MLyEY9Of8cA8DABi03XelgtxEaG0el0LqamUtnvR9K77.Y7nhFaCFx8kMD0w4s3qTScNUrxfhTQXzPeIELpXoOT6sHU9hCyCREMTi7VQqm0tqjiPw8GelO+4tuISNb4ylqXHw138n0Uyb2XO0Bt3f123VRLqXFBzjJIFYmwegg9Zp">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BOXjbZxvbZE19GY2lea4yTcgUy3LRAgNCsS1dRF1X1sVWw550x+X3qnqIVLKYzdTluepS5NwO3ZbUAmrOBppYKPLbTcDRcjg+/RnDnMTJ7O8gQOInv13bGSHzfvxUctJ.BZdvjkxro0ah7RSWTbxJrnbGbX9+qamLEfLeEkwy7m1W//YwsElaUEr4KbAti8B79RIP8TAc91TwTTl7dM0v8mK5NIdrHvs1Kl5qzNpgpt95N7M051ocKQ9OHKu7Wft8">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -479,17 +479,17 @@
                 </div>
             </div>
             <div class="col-12 col-lg-8 card">
-                <div id="bootstrap-accordion_14" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_9" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_14" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_9" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; האם אתה לא צעיר מידי ופחות מנוסה</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse1_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
+                        <div id="collapse1_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>&nbsp;בעייני לא וגם בעיני הלקוחות שלי, עם הידע והטאצ האישי שלי תהיו מרוצים מאוד, בנוסף עצם היותי צעיר זה יתרון, אני נענה מהר לבקשת הלקוח ומוודא שהוא מרוצה ב 100%</strong></p>
                             </div>
@@ -497,7 +497,7 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo" style="text-align:right">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_14" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_9" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>
                                     </strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<strong>תוך כמה זמן יש לי אתר</strong></p></h4>
                                 <span class="icon-wrapper">
@@ -505,7 +505,7 @@
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse2_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
+                        <div id="collapse2_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>זה הרוב תלוי בך, אני יכול להקים אתר ב7 ימים. הכול משתנה בין אדם לאדם<br>אם זה אדם חרוץ שמשקיע על האתר שלו כל יום שלוח תכנים <br>ומבצע מה שאני דורש ממנו זה בערך שבוע . אך לפעמים יכול לקחת יותר<br>אם זה מישהו שמורח את הזמן זה יכול לקחת לפעמים גם חודש<br></strong>!<strong>הכל תלוי בך</strong><br></p>
                             </div>
@@ -513,14 +513,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_14" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_9" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5" style="text-align:right"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; איך יש לך זמן לשלב גם לימודים וגם עבודה</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse3_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
+                        <div id="collapse3_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>אז השאלה הזאת מאוד נפוצה התשובה היא פשוטה אני
 <br>בן אדם חרוץ שמשקיע בכל דבר שאני מתחיל בחיים לא עוזב
@@ -530,14 +530,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFour">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_14" aria-expanded="false" aria-controls="collapse4">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_9" aria-expanded="false" aria-controls="collapse4">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>איך אתה מתמודד עם בעיות טכניות שעלולות להתרחש בזמן בנייה של אתר</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse4_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
+                        <div id="collapse4_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>בדרך כלל אני מצליח להסתדר עם הכול ואם אני לא מצליח יש לי חברים בתחום שמבינים ובנוים גם</strong></p>
                             </div>
@@ -545,14 +545,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFive">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_14" aria-expanded="false" aria-controls="collapse5">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_9" aria-expanded="false" aria-controls="collapse5">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; יש לך תיק עבודות</strong></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse5_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
+                        <div id="collapse5_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>אז כן יש לי תיק עבודות ואתר אחד שעומד וכמה בתהליכי הרמה ועוד אתרים שבניתי&nbsp;</strong><br><strong>לדוגמאות ועוד</strong></p>
                             </div>
@@ -623,7 +623,7 @@
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
   
-  
+  <script src="https://cdn.enable.co.il/licenses/enable-L25197m6h825pgny-0324-57190/init.js"></script>
   
 <input name="cookieData" type="hidden" data-cookie-cookiesAlertType='1' data-cookie-customDialogSelector='null' data-cookie-colorText='#ffffff' data-cookie-colorBg='rgb(0, 119, 92)' data-cookie-opacityOverlay='0' data-cookie-bgOpacity='100' data-cookie-textButton='מאשר' data-cookie-rejectText='REJECT' data-cookie-colorButton='#ffffff' data-cookie-rejectColor='#ffffff' data-cookie-colorLink='#ffffff' data-cookie-underlineLink='true' data-cookie-text="בעקבות המצב מחירים ירדו מוזמנים לראות">
   
