--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2j1cO5"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2j1cO5" type="text/css">
 
   
   
@@ -75,12 +75,12 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle display-4" href="page1.html#header02-1" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">&nbsp; התהליך והמחיר</a><div class="dropdown-menu" aria-labelledby="dropdown-981"><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#header12-h">הסבר קצר על התהליך</a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#features03-3">?מהי התחייבות שלכם </a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#pricing01-d">המחירים</a></div>
+                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="page1.html#header02-1" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">&nbsp; התהליך והמחיר</a><div class="dropdown-menu show" aria-labelledby="dropdown-981" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#header12-h">הסבר קצר על התהליך</a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#features03-3">?מהי התחייבות שלכם </a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#pricing01-d">המחירים</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#list01-d">שאלות נפוצות</a></li>
                     <li class="nav-item">
                         <a class="nav-link link text-primary display-4" href="index.html#contacts01-3">צרו קשר</a>
                     </li><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="file:///C:/Users/%D7%9C%D7%99%D7%A2%D7%93%20%D7%A9%D7%9B%D7%98%D7%A8/AppData/Local/Mobirise.com/Mobirise/amitshechter6630_0040gmail_002ecom/addons/agentm5/components/index.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">אודות</a><div class="dropdown-menu show" aria-labelledby="dropdown-774" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="index.html#header01-g">מי אני<br></a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features1-1">למה אצלי</a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features3-6">עם  מה  אני  בא<br></a></div>
+                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="file:///C:/Users/%D7%9C%D7%99%D7%A2%D7%93%20%D7%A9%D7%9B%D7%98%D7%A8/AppData/Local/Mobirise.com/Mobirise/amitshechter6630_0040gmail_002ecom/addons/agentm5/components/index.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">אודות</a><div class="dropdown-menu show" aria-labelledby="dropdown-774" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="index.html#header01-g">מי אני<br></a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features1-1">למה אצלי</a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features3-6">עם  מה  אני  בא<br></a></div>
                     </li></ul>
                 
 
@@ -507,7 +507,7 @@
       <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
-  
+  <script src="https://cdn.enable.co.il/licenses/enable-L25197m6h825pgny-0324-57190/init.js"></script>
   
 <input name="cookieData" type="hidden" data-cookie-cookiesAlertType='1' data-cookie-customDialogSelector='null' data-cookie-colorText='#ffffff' data-cookie-colorBg='rgb(0, 119, 92)' data-cookie-opacityOverlay='0' data-cookie-bgOpacity='100' data-cookie-textButton='מאשר' data-cookie-rejectText='REJECT' data-cookie-colorButton='#ffffff' data-cookie-rejectColor='#ffffff' data-cookie-colorLink='#ffffff' data-cookie-underlineLink='true' data-cookie-text="בעקבות המצב מחירים ירדו מוזמנים לראות">
   
