--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=B5ziZu"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=B5ziZu" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=kThsXt"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=kThsXt" type="text/css">
 
   
   
@@ -360,7 +360,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BOXjbZxvbZE19GY2lea4yTcgUy3LRAgNCsS1dRF1X1sVWw550x+X3qnqIVLKYzdTluepS5NwO3ZbUAmrOBppYKPLbTcDRcjg+/RnDnMTJ7O8gQOInv13bGSHzfvxUctJ.BZdvjkxro0ah7RSWTbxJrnbGbX9+qamLEfLeEkwy7m1W//YwsElaUEr4KbAti8B79RIP8TAc91TwTTl7dM0v8mK5NIdrHvs1Kl5qzNpgpt95N7M051ocKQ9OHKu7Wft8">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="13ZFtPYX/tHYDf86uk9Zdu2/HLKWm8ltG3suRtQW6li0lqSKmcfCy7I65gAYGxInMOcKB9EZP9MTy0WGX5St7UdBipGynemDA+M3GC7AnXt9Xx932Bw5HSKKIODvV8Th.2PDG0SmGu6s8px8su7uUKvxidEdq1gwPuyoViA0sN7/caPlN6jUxZNmKTFsNKpRQy9lwEXX9bIQjYdBFe+seD2bUdzNHFkFFcAeDaxe9e1p49lugDoeyx1/Bilnn7xwU">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -445,6 +445,18 @@
                                 <p class="card-desc mbr-fonts-style display-4"><strong>מנעולן בכל השרון והסביבה</strong></p>
                                 <p class="card-text mbr-fonts-style display-7">תודה רבה על הכול גם על הכנסת העסק שלי לגוגל ביזניס וגם על האתר שיצא במחיר מדהים עם התחזוקה והשינוים וגם על העיצוב באמת ממליץ לכולם&nbsp;<br>רק אצלך ממליץ בחום לא&nbsp;<br>ימצאו טוב יותר ממך במחיר ללא תחרות כמו&nbsp;<br>שאתה מפרסם תודה רבה&nbsp;</p>
                                 <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://manolan24-7.com/">manolan24-7.com</a></div>
+                            </div>
+                        </div>
+                    </div><div class="item features-image item-mb">
+                        <div class="item-wrapper">
+                            <div class="item-img">
+                                <img src="assets/images/1015x998.jpg" alt="" data-slide-to="3" data-bs-slide-to="3">
+                            </div>
+                            <div class="item-content">
+                                <h4 class="card-title mbr-fonts-style display-7"><strong>נאני דגים</strong></h4>
+                                <p class="card-desc mbr-fonts-style display-4"><strong>חנות מקוונת של דגים&nbsp; במשלוח חינם עד לבית</strong></p>
+                                <p class="card-text mbr-fonts-style display-7"><br>תודה רבה רבה עמית נתת מעל ומעבר אחי<br>באמת עשית דברים שלא היית צריך לעשות&nbsp;<br>באמת שמח על כל רגע שבחרתי לעשות אצלך אתר אחי לא נראה לי שאפשר לקבל יותר<br>תמורה במחירים האלו<br>תודה רבה מעריך מאוד</p>
+                                <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://nanidagim.com/" target="_blank">nanidagim.com</a></div>
                             </div>
                         </div>
                     </div>
