--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2j1cO5"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2j1cO5" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JgWbPL"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JgWbPL" type="text/css">
 
   
   
@@ -296,8 +296,8 @@
                                 <div class="price-wrapper">
                                     <div class="price-wrap">                                     
                                             <div class="price-container">
-                                                <p class="original-price display-5"><strong>1600</strong></p>
-                                                <p class="discount-price display-5"><strong>1500</strong></p>
+                                                <p class="original-price display-5"><strong>1600-1900</strong></p>
+                                                <p class="discount-price display-5"><strong>1500-1800</strong></p>
                                             </div>
 
                                         <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#form01-0">
@@ -371,8 +371,8 @@
                                 <div class="price-wrapper">
                                     <div class="price-wrap">
                                       <div class="price-container">
-                                                <p class="original-price display-5"><strong>2500</strong></p>
-                                                <p class="discount-price display-5"><strong>2300</strong></p>
+                                                <p class="original-price display-5"><strong>2500-2800</strong></p>
+                                                <p class="discount-price display-5"><strong>2300-2600</strong></p>
                                             </div>
                                         <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#form01-0"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>תשיארו פניה</a></div>
                                     </div>
@@ -439,8 +439,8 @@
                                 <div class="price-wrapper">
                                     <div class="price-wrap">
                                       <div class="price-container">
-                                                <p class="original-price display-5"><strong>5000</strong></p>
-                                                <p class="discount-price display-5"><strong>4700</strong></p>
+                                                <p class="original-price display-5"><strong>5000-6000</strong></p>
+                                                <p class="discount-price display-5"><strong>4700-5700</strong></p>
                                             </div>
                                         <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#form01-0"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>תשיארו פניה</a></div>
                                     </div>
