--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=l3MhYF"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=l3MhYF" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=281vbw"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=281vbw" type="text/css">
 
   
   
@@ -236,7 +236,7 @@
             <div class="col-12">
                 <div class="title-wrapper">
                     <h3 class="mbr-section-subtitle mbr-fonts-style display-2"><strong>&nbsp;התחזוקה שאני מציע</strong></h3>
-                    <h2 class="mbr-section-title mbr-fonts-style display-7"><strong>שינוים באתר כולל שינוי תמונה טקסט צבעים הוספת של כל דבר באתר ועוד</strong></h2>
+                    <h2 class="mbr-section-title mbr-fonts-style display-7"><strong>שינוים באתר כולל שינוי תמונה טקסט צבעים הוספת של כל דבר באתר ועוד חוץ מהוספת דפים</strong></h2>
                 </div>
             </div>
             <div class="col-12 col-lg-4 card">
@@ -405,7 +405,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ge6PU5xAO7BF3hgbLwP/NVofmyiumx//PQdoo4XFr/z6DMt2UAxs9wvQgEHQBgeQiQWJxp0c31EGzjFs9b/e0vfqc8sBLoSQoQoHOxOnIIOjHEY/HzPFt3uxQ8iGkfNE.YmvJIIgVwTWFa6tzdRE07w8IlYZvIFYBBnNrzbf2hNVBFR9SiJ0VeEWXUYTugHeUpHPlXaM/qDzOYJc4koGLbZ0jG0rqDh1N9ASsNP8NcczB5LvwWGmM57wdPeSroqv3">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JIZH6U5Bue889iKihtDMANqCpl072Mm9vThJaAvd+iBI6PEU43x+SU1czBc3E/XhjJGzgzkpiRBKCmLpkg0u5ZekMnbL4RD5BezF/z3YX2txR2obVIqb2M5wmNyraRMI.O4B3miDwgLyNX6v70Gki/Od7NUNZH3VWpv+VKqzkYfDK1KH20QzhBk4ZWNvN8nl8umcLXZIi7qEJiMbVkc2DbWxMOts/9DHwcZMJ6/7FGoTC/1958cWeckRkaByCt42P">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
