--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=avdfqE"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=avdfqE" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aHfzQr"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aHfzQr" type="text/css">
 
   
   
