--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
   <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+  <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=281vbw"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=281vbw" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aqTZz0"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aqTZz0" type="text/css">
 
   
   
@@ -405,7 +405,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JIZH6U5Bue889iKihtDMANqCpl072Mm9vThJaAvd+iBI6PEU43x+SU1czBc3E/XhjJGzgzkpiRBKCmLpkg0u5ZekMnbL4RD5BezF/z3YX2txR2obVIqb2M5wmNyraRMI.O4B3miDwgLyNX6v70Gki/Od7NUNZH3VWpv+VKqzkYfDK1KH20QzhBk4ZWNvN8nl8umcLXZIi7qEJiMbVkc2DbWxMOts/9DHwcZMJ6/7FGoTC/1958cWeckRkaByCt42P">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jvYz2+xTpBopmKPIzzRdFAyulH0Z0QFEPZKrfGQBddggL+aHg0Iy1iKKsr06fsKLEKekys58zm++uP/LglnuRNc99RxiGA+VsYihqzye03J58GfCGrk8HK+2utp11Ce5.wrgXzMQQ5eAbXNqKK68ZfiFSZtmznFeqazECh/biZHRPLfLkM9qLSmVPpFkfTPjF9ERBVE0XFCN0JmdNdRCjkhGxlIggUKNxE9Xt88q8Jbz5hmSly9+GPTRU3fa7EvTh">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
