--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -22,13 +22,13 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-    <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+    <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aHfzQr"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aHfzQr" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=FD8BVl"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=FD8BVl" type="text/css">
 
   
   
